opam-version: "1.2"
maintainer: "Frédéric Bour <frederic.bour@lakaban.net>"
authors: "Frédéric Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/owee"
bug-reports: "https://github.com/let-def/owee"
license: "MIT"
dev-repo: "https://github.com/let-def/owee.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.0"}
]
available: [ocaml-version >= "4.02"]
