(executables
 (names decodedline_elf decodedline_macho functions locate read_buildid read_stapsdt_probes)
 (libraries owee unix))

(alias
 (name examples)
 (deps decodedline_elf.exe decodedline_macho.exe 
       functions.exe locate.exe
       read_buildid.exe read_stapsdt_probes.exe))

(rule
  (deps test.c)
  (targets test-4.bin test-5.bin)
  (action 
   (progn 
    (run gcc test.c -gdwarf-4 -o test-4.bin)
    (run gcc test.c -gdwarf-5 -o test-5.bin))))

(rule
 (alias runtest)
 (deps test-4.bin test-5.bin)
 (targets test-dwarf-4.output test-dwarf-5.output)
 (action
  (progn
   (with-stdout-to test-dwarf-4.output (run %{exe:decodedline_elf.exe} test-4.bin))
   (with-stdout-to test-dwarf-5.output (run %{exe:decodedline_elf.exe} test-5.bin)))))

(rule
 (alias runtest)
 (deps test-dwarf-4.expected test-dwarf-4.output)
 (action (diff test-dwarf-4.expected test-dwarf-4.output)))

(rule
 (alias runtest)
 (deps test-dwarf-5.expected test-dwarf-5.output)
 (action (diff test-dwarf-5.expected test-dwarf-5.output)))
